# seeding-mcp-server

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
src/seeding_mcp/: __init__.py  config.py  scoring.py  server.py  startgg_client.py
tests/: test_scoring.py  test_startgg_client.py
